Fixed Responsive design and placeholder on iOS

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -259,6 +259,7 @@ svg.icon{
 
     input[type='text'], input[type='email'], input[type="password"]{
         width: 20vw;
+        line-height: 20px;
     }
 
     input[type='submit']{
